Major release. CMS not yet supported.

--- a/src/main/resources/static/css/modal.css
+++ b/src/main/resources/static/css/modal.css
@@ -56,3 +56,13 @@ p#modal-title {
     font-weight: bold;
     display: inline-block;
 }
+
+/*
+#question-creator td {
+    padding: 5px;
+}
+
+#question-creator td * {
+    width: 100%;
+}
+*/
